--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 <p>$35</p>
             </div>
         </div>
+        <hr id="horizontal">
     </section>
     <section class="fourth-section" >
         <div class="about">
